moved todo input buttons to the left side of the button. Fixed overlapping div issue.

--- a/src/app/to-do/to-do.component.css
+++ b/src/app/to-do/to-do.component.css
@@ -1,5 +1,5 @@
 /* ToDo List neds no bullets */
-#To-Do-List{
+.To-Do-List{
   list-style-type: none ;
   padding: 0;
   margin: 0;
